# AuroraPlayer

./: .gitignore  AuroraPlayer.bat  CMakeLists.txt  README.md
cmake/: FindMpv.cmake
resources/: resources.qrc
resources/icons/: app.rc
scripts/: INSTALL.md  build.cmd  build.ps1  convert-chickenrice.cmd  convert-chickenrice.ps1  create-shortcut.ps1  make-icon.ps1  package.ps1  refine-srt.cmd  refine-srt.py  setup-libmpv.ps1  vocal-separator.py
scripts/templates/: README.cuda-fragment.txt  README.template.txt  THIRD-PARTY-LICENSES.txt
src/: main.cpp
src/ai/: AudioExtractor.cpp  AudioExtractor.h  ModelManager.cpp  ModelManager.h  SubtitleExport.h  SubtitleStream.cpp  SubtitleStream.h  TranscriptionDialog.cpp  TranscriptionDialog.h  TranscriptionJob.cpp  TranscriptionJob.h  TranslationDialog.cpp  TranslationDialog.h  TranslationEngine.cpp  TranslationEngine.h  TranslationJob.cpp  TranslationJob.h  VadParams.h  WhisperEngine.cpp  WhisperEngine.h
src/core/: MpvPlayer.cpp  MpvPlayer.h
src/ui/: ControlBar.cpp  ControlBar.h  MainWindow.cpp  MainWindow.h  PlaylistPanel.cpp  PlaylistPanel.h  QualityAdvancedDialog.cpp  QualityAdvancedDialog.h  SeekBar.cpp  SeekBar.h  ThumbnailWorker.cpp  ThumbnailWorker.h  TimelineStrip.cpp  TimelineStrip.h  VideoWidget.cpp  VideoWidget.h
src/vr/: VrController.cpp  VrController.h  VrRenderer.cpp  VrRenderer.h
